# faststream-issue

./: README.md  docker-compose.yaml  pyproject.toml  serve.py
data/: images.csv
stream/: __init__.py  handlers.py  routers.py  types.py  utils.py
